[package]
name = "app"
version = "0.4.0"
description = "Scan URLs, Domains, IP, and Email Addresses."
authors = ["Ix76y"]
license = ""
repository = "https://github.com/Ix76y/ioc-scanner/"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.87"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [] }
#tauri-plugin-store = "2.0.0-beta.5"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
thiserror = "1.0.37"
url = { version = "2", features = ["serde"] }
urlscan = "0.2.0"
urlencoding = "2.1.3"
securestore = "0.100.0"
base64 = "0.21.7"
validator = "0.16.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
